[package]
name = "geoelan"
version = "2.6.0"
authors = ["Jens Larsson <jens.dev@fastmail.com>"]
description = "GeoELAN is a command-line tool for annotating GoPro/Garmin VIRB GPS logs using ELAN"
edition = "2021"
repository = "https://github.com/jenslar/geoelan"
keywords = ["elan", "gopro", "virb", "action camera", "annotation", "geo", "gps"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4", features = ["wrap_help"]}
time = "0.3"
geojson = {version = "0.24", features = ["geo-types"]}
serde_json = "1.0.79"
kml = "0.8"
walkdir = "2"
rand = "0.8.5"
regex = "1"
plotly = "0.8.4"
fit-rs = {git = "https://github.com/jenslar/fit-rs.git"}
gpmf-rs = {git = "https://github.com/jenslar/gpmf-rs.git"}
eaf-rs = {git = "https://github.com/jenslar/eaf-rs.git"}
mp4iter = {git = "https://github.com/jenslar/mp4iter.git"}
jpegiter = {git = "https://github.com/jenslar/jpegiter.git"}
leaflet = "0.2.2"
