[package]
name = "geoelan"
version = "2.7.6"
authors = ["Jens Larsson <jens.dev@fastmail.com>"]
description = "GeoELAN is a command-line tool for annotating GoPro/Garmin VIRB GPS logs using ELAN"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jenslar/geoelan"
keywords = ["elan", "gopro", "virb", "action camera", "annotation", "geo", "gps"]

[dependencies]
clap = {version = "4.5.35", features = ["wrap_help"]}
time = "0.3.41"
geojson = {version = "0.24.2", features = ["geo-types"]}
serde_json = "1.0.140"
kml = "0.8.5"
walkdir = "2"
rand = "0.9.0"
regex = "1.10"
plotly = {version = "0.12.1", features = ["plotly_embed_js", "kaleido"]}
fit-rs = {git = "https://github.com/jenslar/fit-rs.git"}
gpmf-rs = {git = "https://github.com/jenslar/gpmf-rs.git"}
eaf-rs = {git = "https://github.com/jenslar/eaf-rs.git"}
mp4iter = {git = "https://github.com/jenslar/mp4iter.git"}
